--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Tynril</title>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+    <link rel="stylesheet" href="%sveltekit.assets%/css/reset.css" />
+    <link rel="stylesheet" href="%sveltekit.assets%/css/fonts.sass" />
+    <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
-  <body>
-    <div>%sveltekit.body%</div>
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      font-size: 14px;
+    }
+  </style>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
