--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>Tynril</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <link rel="stylesheet" href="%sveltekit.assets%/css/reset.css" />
+    <link rel="stylesheet" href="%sveltekit.assets%/css/global.css" />
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
